# Pelipper

./: .gitignore  CMakeLists.txt
src/: account.cpp  account.h  accountitem.cpp  accountitem.h  application.cpp  application.h  basefolderitem.cpp  basefolderitem.h  contact.cpp  contact.h  folder.cpp  folder.h  folderitem.cpp  folderitem.h  folderlistmodel.cpp  folderlistmodel.h  imap.cpp  imap.h  imapcache.cpp  imapcache.h  imapmanager.cpp  imapmanager.h  main.cpp  message.cpp  message.h  messageitem.cpp  messageitem.h  messagelistmodel.cpp  messagelistmodel.h  qml.qrc  session.cpp  session.h  settings.h  sortmodel.cpp  sortmodel.h
src/Threads/: folderlistworker.cpp  folderlistworker.h  messagelistthread.cpp  messagelistthread.h
src/backend/: account.cpp  account.h  address.cpp  address.h  cachemanager.cpp  cachemanager.h  contact.h  flags.cpp  flags.h  folder.cpp  folder.h  folderhandler.cpp  folderhandler.h  idlemanager.cpp  idlemanager.h  imapcache.cpp  imapcache.h  imapservice.cpp  imapservice.h  inboxmoniter.cpp  inboxmoniter.h  message.cpp  message.h  messagehandler.cpp  messagehandler.h  messageheaders.cpp  messageheaders.h  messagepart.cpp  messagepart.h  session.cpp  session.h  settings.cpp  settings.h  smtp.cpp  smtp.h  smtpservice.cpp  smtpservice.h  syncmanager.cpp  syncmanager.h  syncworker.cpp  (+1 more)
src/composer/: attachmentmodel.cpp  attachmentmodel.h  documenthandler.cpp  documenthandler.h
src/folderview/: accountitem.cpp  accountitem.h  folderitem.cpp  folderitem.h  folderlistmodel.cpp  folderlistmodel.h
src/messagelistview/: messagelistmodel.cpp  messagelistmodel.h  roles.h  sortmodel.cpp  sortmodel.h
src/messageview/: messageitem.cpp  messageitem.h
src/qml/: AddAccount.qml  AddressBarComposerWidget.qml  ComposerWidget.qml  FolderListModal.qml  MainWindow.qml  MessageItemDelegate.qml  MessageList.qml  MessageView.qml  SideBar.qml  main.qml
